[tool.poetry]
name = "django-problemjson"
version = "0.1.0"
description = "RFC-7807 compliant 'application/problem+json' exception handling for Django"
authors = ["Mike Hurt <m.hurt@incusperformance.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mikenotfound/django-problemjson"
repository = "https://github.com/mikenotfound/django-problemjson"
keywords = ["django", "rfc-7807"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
packages = [
    { include = "problemjson"},
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
flake8-isort = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
combine_star = true
force_single_line = true
import_heading_firstparty = 'Project'
import_heading_future = 'Future'
import_heading_localfolder = 'Local'
import_heading_stdlib = 'Standard Library'
import_heading_thirdparty = '3rd-party'
known_django = ['django']
line_length = 100
lines_after_imports = 2
order_by_type = true
sections = [
    'FUTURE',
    'STDLIB',
    'DJANGO',
    'THIRDPARTY',
    'FIRSTPARTY',
    'LOCALFOLDER',
]
